--- a/index.html
+++ b/index.html
@@ -1,47 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Roboto:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style/reset.css" />
+    <link rel="stylesheet" href="/style/style.css" />
+    <title>Frontend Mentor | Results summary component</title>
+  </head>
+  <body>
+    <section class="result">
+      <h2 class="result__title">Your Result</h2>
+      <div class="result__score">
+        <span class="result__pointsScored">76</span>
+        <p class="result__totalPoints">of 100</p>
+      </div>
+      <header class="result__header">
+        <h1 class="result__textScore">Great</h1>
+        <p result__body>
+          Your performance exceed 65% of the people conducting the test here!
+        </p>
+      </header>
+    </section>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <section class="summary">
+      <h2 class="summary__title">Summary</h2>
+      <ul class="summary__list">
+        <li class="summary__item">
+          <img
+            src="/assets/images/icon-reaction.svg"
+            class="summary__icon"
+            alt="reaction icon"
+          />
+          <p class="summary__skillName">Reaction</p>
+          <span class="summary__score">80 / 100</span>
+        </li>
+        <li class="summary__item">
+          <img
+            src="/assets/images/icon-memory.svg"
+            class="summary__icon"
+            alt="reaction icon"
+          />
+          <p class="summary__skillName">Memory</p>
+          <span class="summary__score">92 / 100</span>
+        </li>
+        <li class="summary__item">
+          <img
+            src="/assets/images/icon-verbal.svg"
+            class="summary__icon"
+            alt="reaction icon"
+          />
+          <p class="summary__skillName">Verbal</p>
+          <span class="summary__score">61 / 100</span>
+        </li>
+        <li class="summary__item">
+          <img
+            src="/assets/images/icon-visual.svg"
+            class="summary__icon"
+            alt="reaction icon"
+          />
+          <p class="summary__skillName">Visual</p>
+          <span class="summary__score">73 / 100</span>
+        </li>
+      </ul>
+      <a href="#" class="btn">Continue</a>
+    </section>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- 
+    # I'm not sure if I should use span element for my summary__score
+    # I used img for my Icons, should I use other html for that ?
+    
+    -->
+  </body>
 </html>
