--- a/index.html
+++ b/index.html
@@ -19,68 +19,71 @@
     <link rel="stylesheet" href="/style/style.css" />
     <title>Frontend Mentor | Results summary component</title>
   </head>
-  <body>
-    <section class="result">
-      <h2 class="result__title">Your Result</h2>
-      <div class="result__score">
-        <span class="result__pointsScored">76</span>
-        <p class="result__totalPoints">of 100</p>
-      </div>
-      <header class="result__header">
-        <h1 class="result__textScore">Great</h1>
-        <p result__body>
-          Your performance exceed 65% of the people conducting the test here!
-        </p>
-      </header>
-    </section>
+  <body class="center">
+    <!-- I used utility class center on body just to center the component -->
+    <div class="container summary__component">
+      <section class="result">
+        <h2 class="result__title">Your Result</h2>
+        <div class="result__score">
+          <span class="result__pointsScored">76</span>
+          <p class="result__totalPoints">of 100</p>
+        </div>
+        <header class="result__header">
+          <h1 class="result__textScore">Great</h1>
+          <p class="result__body">
+            Your performance exceed 65% of the people conducting the test here!
+          </p>
+        </header>
+      </section>
 
-    <section class="summary">
-      <h2 class="summary__title">Summary</h2>
-      <ul class="summary__list">
-        <li class="summary__item">
-          <img
-            src="/assets/images/icon-reaction.svg"
-            class="summary__icon"
-            alt="reaction icon"
-          />
-          <p class="summary__skillName">Reaction</p>
-          <span class="summary__score">80 / 100</span>
-        </li>
-        <li class="summary__item">
-          <img
-            src="/assets/images/icon-memory.svg"
-            class="summary__icon"
-            alt="reaction icon"
-          />
-          <p class="summary__skillName">Memory</p>
-          <span class="summary__score">92 / 100</span>
-        </li>
-        <li class="summary__item">
-          <img
-            src="/assets/images/icon-verbal.svg"
-            class="summary__icon"
-            alt="reaction icon"
-          />
-          <p class="summary__skillName">Verbal</p>
-          <span class="summary__score">61 / 100</span>
-        </li>
-        <li class="summary__item">
-          <img
-            src="/assets/images/icon-visual.svg"
-            class="summary__icon"
-            alt="reaction icon"
-          />
-          <p class="summary__skillName">Visual</p>
-          <span class="summary__score">73 / 100</span>
-        </li>
-      </ul>
-      <a href="#" class="btn">Continue</a>
-    </section>
+      <section class="summary">
+        <h2 class="summary__title">Summary</h2>
+        <ul class="summary__list">
+          <li class="summary__item">
+            <img
+              src="/assets/images/icon-reaction.svg"
+              class="summary__icon"
+              alt="reaction icon"
+            />
+            <p class="summary__skillName">Reaction</p>
+            <span class="summary__score">80 / 100</span>
+          </li>
+          <li class="summary__item">
+            <img
+              src="/assets/images/icon-memory.svg"
+              class="summary__icon"
+              alt="reaction icon"
+            />
+            <p class="summary__skillName">Memory</p>
+            <span class="summary__score">92 / 100</span>
+          </li>
+          <li class="summary__item">
+            <img
+              src="/assets/images/icon-verbal.svg"
+              class="summary__icon"
+              alt="reaction icon"
+            />
+            <p class="summary__skillName">Verbal</p>
+            <span class="summary__score">61 / 100</span>
+          </li>
+          <li class="summary__item">
+            <img
+              src="/assets/images/icon-visual.svg"
+              class="summary__icon"
+              alt="reaction icon"
+            />
+            <p class="summary__skillName">Visual</p>
+            <span class="summary__score">73 / 100</span>
+          </li>
+        </ul>
+        <a href="#" class="btn">Continue</a>
+      </section>
 
-    <!-- 
-    # I'm not sure if I should use span element for my summary__score
-    # I used img for my Icons, should I use other html for that ?
-    
-    -->
+      <!-- 
+      # I'm not sure if I should use span element for my summary__score
+      # I used img for my Icons, should I use other html for that ?
+      
+      -->
+    </div>
   </body>
 </html>
