--- a/index.html
+++ b/index.html
@@ -39,41 +39,49 @@
       <section class="summary">
         <h2 class="summary__title">Summary</h2>
         <ul class="summary__list">
-          <li class="summary__item">
+          <li class="summary__item background--red">
             <img
               src="/assets/images/icon-reaction.svg"
               class="summary__icon"
               alt="reaction icon"
             />
-            <p class="summary__skillName">Reaction</p>
-            <span class="summary__score">80 / 100</span>
+            <p class="summary__skillName color--red">Reaction</p>
+            <span class="summary__score"
+              >80 / <span class="opacity">100</span></span
+            >
           </li>
-          <li class="summary__item">
+          <li class="summary__item background--yellow">
             <img
               src="/assets/images/icon-memory.svg"
               class="summary__icon"
               alt="reaction icon"
             />
-            <p class="summary__skillName">Memory</p>
-            <span class="summary__score">92 / 100</span>
+            <p class="summary__skillName color--yellow">Memory</p>
+            <span class="summary__score"
+              >92 / <span class="opacity">100</span></span
+            >
           </li>
-          <li class="summary__item">
+          <li class="summary__item background--green">
             <img
               src="/assets/images/icon-verbal.svg"
               class="summary__icon"
               alt="reaction icon"
             />
-            <p class="summary__skillName">Verbal</p>
-            <span class="summary__score">61 / 100</span>
+            <p class="summary__skillName color--green">Verbal</p>
+            <span class="summary__score"
+              >61 / <span class="opacity">100</span></span
+            >
           </li>
-          <li class="summary__item">
+          <li class="summary__item background--blue">
             <img
               src="/assets/images/icon-visual.svg"
               class="summary__icon"
               alt="reaction icon"
             />
-            <p class="summary__skillName">Visual</p>
-            <span class="summary__score">73 / 100</span>
+            <p class="summary__skillName color--blue">Visual</p>
+            <span class="summary__score"
+              >73 / <span class="opacity">100</span></span
+            >
           </li>
         </ul>
         <a href="#" class="btn">Continue</a>
@@ -82,6 +90,7 @@
       <!-- 
       # I'm not sure if I should use span element for my summary__score
       # I used img for my Icons, should I use other html for that ?
+      # Not sure if I can use so many span elements ...
       
       -->
     </div>
