--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body class="center">
     <!-- I used utility class center on body just to center the component -->
     <div class="container summary__component">
-      <section class="result">
+      <section class="result result--second-background">
         <h2 class="result__title">Your Result</h2>
         <div class="result__score">
           <span class="result__pointsScored">76</span>
